force-app/main/default/objects/TPM_ConfigureNightlyBatch__mdt/TPM_ConfigureNightlyBatch__mdt.object-meta.xml
<CustomObject>
    <description>To Configure the TPMCalculationChain NightlyBatch</description>
    <label>TPM_ConfigureNightlyBatch</label>
    <pluralLabel>TPM_ConfigureNightlyBatchs</pluralLabel>
</CustomObject>