force-app/main/default/objects/TPM_ConfigureNightlyBatch__mdt/fields/TPM_execAccountPlanBasic__c.field-meta.xml
<CustomField>
    <fullName>TPM_execAccountPlanBasic__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TPM_execAccountPlanBasic</label>
    <type>Checkbox</type>
</CustomField>