force-app/main/default/objects/TPM_ConfigureNightlyBatch__mdt/fields/TPM_execAccountPlanBusinessPlan__c.field-meta.xml
<CustomField>
    <fullName>TPM_execAccountPlanBusinessPlan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TPM_execAccountPlanBusinessPlan</label>
    <type>Checkbox</type>
</CustomField>