force-app/main/default/objects/TPM_ConfigureNightlyBatch__mdt/fields/TPM_execAccountProductList__c.field-meta.xml
<CustomField>
    <fullName>TPM_execAccountProductList__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TPM_execAccountProductList</label>
    <type>Checkbox</type>
</CustomField>