force-app/main/default/objects/TPM_ConfigureNightlyBatch__mdt/fields/TPM_execFundCalculation__c.field-meta.xml
<CustomField>
    <fullName>TPM_execFundCalculation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TPM_execFundCalculation</label>
    <type>Checkbox</type>
</CustomField>