force-app/main/default/objects/TPM_ConfigureNightlyBatch__mdt/fields/TPM_execPromotion__c.field-meta.xml
<CustomField>
    <fullName>TPM_execPromotion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TPM_execPromotion</label>
    <type>Checkbox</type>
</CustomField>