force-app/main/default/objects/TPM_ConfigureNightlyBatch__mdt/fields/TPM_execRBFCalculation__c.field-meta.xml
<CustomField>
    <fullName>TPM_execRBFCalculation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TPM_execRBFCalculation</label>
    <type>Checkbox</type>
</CustomField>