force-app/main/default/objects/TPM_ConfigureNightlyBatch__mdt/fields/TPM_execReorganization__c.field-meta.xml
<CustomField>
    <fullName>TPM_execReorganization__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TPM_execReorganization</label>
    <type>Checkbox</type>
</CustomField>