force-app/main/default/objects/TPM_ConfigureNightlyBatch__mdt/fields/TPM_PAAPLA_Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>TPM_PAAPLA_Batch_Size__c</fullName>
    <label>TPM_PAAPLA_Batch_Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>