force-app/main/default/objects/TPM_ConfigureNightlyBatch__mdt/fields/TPM_Sales_Org__c.field-meta.xml
<CustomField>
    <fullName>TPM_Sales_Org__c</fullName>
    <label>TPM_Sales_Org</label>
    <length>4</length>
    <type>Text</type>
</CustomField>